--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>frontier_exploration_turtlebot</name>
+  <name>diffrential_turtlebot</name>
   <version>1.0.0</version>
-  <description>The frontier_exploration_turtlebot package</description>
+  <description>The diffrential_turtlebot package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -63,7 +63,7 @@
   <build_export_depend>geometry_msgs</build_export_depend>
   <build_export_depend>sensor_msgs</build_export_depend>
   <build_export_depend>rostest</build_export_depend>
-  
+
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
